# ephemeral-storage-setup-image

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  configure-disks.sh  configure-lvm.sh  configure-swap.sh  deny.toml  detect-disks.sh  lvm.conf  manage-taints.sh  remove-taint.sh
.github/workflows/: dockerhub.yaml  pr.yml  shell-check.yml  shell-tests.yml
examples/aws/: bottlerocket-lvm.toml  bottlerocket-swap.toml
examples/azure/: lvm.yaml  swap.yaml
examples/gcp/: lvm.yaml  swap.yaml
src/: detect.rs  lib.rs  lvm.rs  main.rs  remove_taint.rs  swap.rs
testdata/: lsblk_contrived.json
testdata/aws/: lsblk.json
testdata/azure/: lsblk.json
testdata/gcp/: lsblk.json
tests/: configure-disks.bats  configure-lvm.bats  manage-taints.bats  remove-taint.bats  run-tests.sh  test-configure-lvm.sh  test-configure-swap.sh  test-detect-disks.sh  test-remove-taint.sh  test_helpers.sh
