[package]
name = "ephemeral-storage-setup"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"
resolver = "2"
publish = false

[[bin]]
name = "ephemeral-storage-setup"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
k8s-openapi = { version = "0.25.0", features = ["v1_31"] }
kube = { version = "1.1.0", default-features = false, features = ["openssl-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt"] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
opt-level = "z"
